--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,11 @@
         "rates"
     ],
     "homepage": "http://www.xe.com",
-    "license": "proprietary",
+    "license": "MPL-2.0",
     "require": {
         "php": ">=5.6.0"
     },
     "authors": [
-        {
-            "name": "Anushan Easwaramoorthy",
-            "email": "aeaswaramoorthy@xe.com"
-        },
         {
             "name": "XE.com Development Team",
             "homepage": "http://www.xe.com"
